--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,11 @@
 [tool.poetry]
 name = "NonlocalBox"
-version = "0.1"
+version = "0.1.1"
 description = "A friendly API for simulating nonlocal no-signalling correlations"
 license = "GNU GPLv3"
 authors = ["Ottó Hanyecz", "Mátyás Koniorczyk", "Péter Naszvadi"]
 readme = "README.rst"
-homepage = "none"
-repository = "none"
-keywords = ["none"]
+repository = "https://github.com/ohanyecz/nonlocalbox"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "License :: OSI Approved :: MIT License",
